not-observed/ping-test/gateway-api.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: traefik
spec:
  controllerName: traefik.io/gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik-gateway
  namespace: smart-alarm
spec:
  gatewayClassName: traefik
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rig-alarms-dashboard-route
  namespace: smart-alarm
spec:
  parentRefs:
  - name: traefik-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /RigAlarmsDashboard
    backendRefs:
    - name: smart-alarm-web-app-fe
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: smart-alarms-route
  namespace: smart-alarm
spec:
  parentRefs:
  - name: traefik-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: smart-alarms-webapp-service
      port: 80
